# dictpress

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
dictpress/: __init__.py
tests/: test_readme_usages.py
